--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ html {
 	/* px means "pixels". The base font size is now 10 pixels high */
 	font-size: 10px;
 	/* Replace PLACEHOLDER with the font-family property value you got from Google Fonts */
-	font-family: 'Great Vibes', cursive;
+	font-family: 'Jost', sans-serif;
 
 	background-color: #00539f;
 }
@@ -12,13 +12,13 @@ html {
 } */
 
 h1 {
-	font-size: 60px;
+	font-size: 48px;
 	text-align: center;
 }
 
 p,
 li {
-	font-size: 16px;
+	font-size: 24px;
 	line-height: 2;
 	letter-spacing: 1px;
 }
